--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
   "plugins" : [
     "syntax-flow",
     "transform-flow-strip-types",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
