--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-syntax-flow": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.13.2",
     "eslint": "^2.12.0",
     "eslint-plugin-flow-vars": "^0.4.0",
