--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.13.2",
     "eslint": "^2.12.0",
-    "eslint-plugin-flow-vars": "^0.4.0",
+    "eslint-plugin-flowtype": "^2.25.0",
     "flow-copy-source": "^1.1.0",
     "mocha": "^3.0.2"
   },
