--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
   },
   "homepage": "https://github.com/gcanti/flow-runtime",
   "dependencies": {
+    "ast-types": "^0.9.2",
     "flow-static-land": "^0.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
+    "babel-generator": "^6.18.0",
     "babel-plugin-syntax-flow": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.13.2",
+    "babylon": "^6.13.1",
     "eslint": "^2.12.0",
     "eslint-plugin-flowtype": "^2.25.0",
     "flow-copy-source": "^1.1.0",
