--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flow-runtime",
+  "name": "flow-io",
   "version": "0.1.0",
-  "description": "Implementation of common algebraic types in JavaScript + Flow",
+  "description": "Flow compatible runtime type system for IO validation",
   "main": "lib/index.js",
   "files": [
     "lib",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gcanti/flow-runtime.git"
+    "url": "https://github.com/gcanti/flow-io.git"
   },
   "author": "Giulio Canti <giulio.canti@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gcanti/flow-runtime/issues"
+    "url": "https://github.com/gcanti/flow-io/issues"
   },
-  "homepage": "https://github.com/gcanti/flow-runtime",
+  "homepage": "https://github.com/gcanti/flow-io",
   "dependencies": {
     "flow-static-land": "^0.2.1"
   },
